deploy: 6a6e7999f3ccb98e2c9aa6cc56abffde353e2f52

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1462ede0",
+   "id": "960f6fb8",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4819bb3a",
+   "id": "16e05ef2",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e4e6cae",
+   "id": "692dd54b",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d74748fd",
+   "id": "3dce3e11",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73402fc1",
+   "id": "9245eacb",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a12cbae1",
+   "id": "d0fe338b",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "480a471a",
+   "id": "fecbbdcb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-20T07:57:03.955807Z",
-     "iopub.status.busy": "2024-09-20T07:57:03.955610Z",
-     "iopub.status.idle": "2024-09-20T07:57:08.778433Z",
-     "shell.execute_reply": "2024-09-20T07:57:08.777847Z"
+     "iopub.execute_input": "2024-10-15T10:21:41.990913Z",
+     "iopub.status.busy": "2024-10-15T10:21:41.990725Z",
+     "iopub.status.idle": "2024-10-15T10:21:46.436664Z",
+     "shell.execute_reply": "2024-10-15T10:21:46.436069Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d8573c5",
+   "id": "0b37e40b",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbac4d93",
+   "id": "999666ca",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f00907b9",
+   "id": "e2d140a7",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d626af2a",
+   "id": "1667aeee",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b208beef",
+   "id": "e33d0142",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "376bed27",
+   "id": "a56655b7",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc26d641",
+   "id": "3d23d0f9",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45dae799",
+   "id": "de3c0ce5",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3b1462ea",
+   "id": "125ce4d8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-20T07:57:08.781170Z",
-     "iopub.status.busy": "2024-09-20T07:57:08.780475Z",
-     "iopub.status.idle": "2024-09-20T07:57:10.887320Z",
-     "shell.execute_reply": "2024-09-20T07:57:10.886615Z"
+     "iopub.execute_input": "2024-10-15T10:21:46.438957Z",
+     "iopub.status.busy": "2024-10-15T10:21:46.438510Z",
+     "iopub.status.idle": "2024-10-15T10:21:48.394360Z",
+     "shell.execute_reply": "2024-10-15T10:21:48.393814Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1aa5e2e4",
+   "id": "1a4af7ad",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8f34a228",
+   "id": "4a44f962",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-20T07:57:10.889531Z",
-     "iopub.status.busy": "2024-09-20T07:57:10.889124Z",
-     "iopub.status.idle": "2024-09-20T07:57:10.892951Z",
-     "shell.execute_reply": "2024-09-20T07:57:10.892284Z"
+     "iopub.execute_input": "2024-10-15T10:21:48.396403Z",
+     "iopub.status.busy": "2024-10-15T10:21:48.396031Z",
+     "iopub.status.idle": "2024-10-15T10:21:48.399849Z",
+     "shell.execute_reply": "2024-10-15T10:21:48.399281Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b86ee3d",
+   "id": "80f017e8",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad90ea6e",
+   "id": "be609414",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91c09a9f",
+   "id": "61980dec",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d69c5039",
+   "id": "a7b0d4f9",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2c1b3ecc",
+   "id": "240793d4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-20T07:57:10.895070Z",
-     "iopub.status.busy": "2024-09-20T07:57:10.894690Z",
-     "iopub.status.idle": "2024-09-20T07:57:10.942532Z",
-     "shell.execute_reply": "2024-09-20T07:57:10.941960Z"
+     "iopub.execute_input": "2024-10-15T10:21:48.401621Z",
+     "iopub.status.busy": "2024-10-15T10:21:48.401435Z",
+     "iopub.status.idle": "2024-10-15T10:21:48.447107Z",
+     "shell.execute_reply": "2024-10-15T10:21:48.446518Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c855d3f",
+   "id": "07b8cf31",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c5118266",
+   "id": "99fd587c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-20T07:57:10.944645Z",
-     "iopub.status.busy": "2024-09-20T07:57:10.944257Z",
-     "iopub.status.idle": "2024-09-20T07:57:11.019880Z",
-     "shell.execute_reply": "2024-09-20T07:57:11.019248Z"
+     "iopub.execute_input": "2024-10-15T10:21:48.449142Z",
+     "iopub.status.busy": "2024-10-15T10:21:48.448785Z",
+     "iopub.status.idle": "2024-10-15T10:21:48.517642Z",
+     "shell.execute_reply": "2024-10-15T10:21:48.517115Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d45051a",
+   "id": "6034a833",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dd98518",
+   "id": "439438d7",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "972c3ae9",
+   "id": "16f1bbef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-20T07:57:11.022395Z",
-     "iopub.status.busy": "2024-09-20T07:57:11.021821Z",
-     "iopub.status.idle": "2024-09-20T07:57:11.055319Z",
-     "shell.execute_reply": "2024-09-20T07:57:11.054695Z"
+     "iopub.execute_input": "2024-10-15T10:21:48.519723Z",
+     "iopub.status.busy": "2024-10-15T10:21:48.519363Z",
+     "iopub.status.idle": "2024-10-15T10:21:48.549487Z",
+     "shell.execute_reply": "2024-10-15T10:21:48.548935Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98451c98",
+   "id": "aa254f6c",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df24e440",
+   "id": "dc25d18f",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b301242",
+   "id": "cc39cd7b",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5253e5b4",
+   "id": "0ccd28bf",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "585ee025",
+   "id": "4f0a2e98",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "390519ae",
+   "id": "a75de58d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-20T07:57:11.057436Z",
-     "iopub.status.busy": "2024-09-20T07:57:11.057233Z",
-     "iopub.status.idle": "2024-09-20T07:57:11.061629Z",
-     "shell.execute_reply": "2024-09-20T07:57:11.061135Z"
+     "iopub.execute_input": "2024-10-15T10:21:48.551713Z",
+     "iopub.status.busy": "2024-10-15T10:21:48.551278Z",
+     "iopub.status.idle": "2024-10-15T10:21:48.555437Z",
+     "shell.execute_reply": "2024-10-15T10:21:48.554919Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "049a86c1",
+   "id": "87b3ee15",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "cadfba68",
+   "id": "9f1f9f8a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-20T07:57:11.063385Z",
-     "iopub.status.busy": "2024-09-20T07:57:11.063210Z",
-     "iopub.status.idle": "2024-09-20T07:57:11.066365Z",
-     "shell.execute_reply": "2024-09-20T07:57:11.065612Z"
+     "iopub.execute_input": "2024-10-15T10:21:48.557396Z",
+     "iopub.status.busy": "2024-10-15T10:21:48.557079Z",
+     "iopub.status.idle": "2024-10-15T10:21:48.560162Z",
+     "shell.execute_reply": "2024-10-15T10:21:48.559433Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71cb995c",
+   "id": "01a4e4b3",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c8f48079",
+   "id": "875681f5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-20T07:57:11.068342Z",
-     "iopub.status.busy": "2024-09-20T07:57:11.067941Z",
-     "iopub.status.idle": "2024-09-20T07:57:13.766816Z",
-     "shell.execute_reply": "2024-09-20T07:57:13.766151Z"
+     "iopub.execute_input": "2024-10-15T10:21:48.561961Z",
+     "iopub.status.busy": "2024-10-15T10:21:48.561634Z",
+     "iopub.status.idle": "2024-10-15T10:21:51.195734Z",
+     "shell.execute_reply": "2024-10-15T10:21:51.195142Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba56789f",
+   "id": "23473c43",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a013d12",
+   "id": "a8f19a8f",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "474575cd",
+   "id": "b945f299",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3b56933",
+   "id": "b970b5da",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ccf71a75",
+   "id": "a8e9c772",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-20T07:57:13.769261Z",
-     "iopub.status.busy": "2024-09-20T07:57:13.768574Z",
-     "iopub.status.idle": "2024-09-20T07:57:13.772684Z",
-     "shell.execute_reply": "2024-09-20T07:57:13.772069Z"
+     "iopub.execute_input": "2024-10-15T10:21:51.198094Z",
+     "iopub.status.busy": "2024-10-15T10:21:51.197736Z",
+     "iopub.status.idle": "2024-10-15T10:21:51.201835Z",
+     "shell.execute_reply": "2024-10-15T10:21:51.201170Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7ff53ed01d00>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fb790899940>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79bdf61b",
+   "id": "5f752d8b",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cf128f4",
+   "id": "8d4c94a5",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf7bf22b",
+   "id": "335ad083",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffe73d33",
+   "id": "f5e7d860",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e2bde0a8",
+   "id": "377d12a5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-20T07:57:13.774921Z",
-     "iopub.status.busy": "2024-09-20T07:57:13.774549Z",
-     "iopub.status.idle": "2024-09-20T07:57:13.777811Z",
-     "shell.execute_reply": "2024-09-20T07:57:13.777225Z"
+     "iopub.execute_input": "2024-10-15T10:21:51.203892Z",
+     "iopub.status.busy": "2024-10-15T10:21:51.203566Z",
+     "iopub.status.idle": "2024-10-15T10:21:51.206739Z",
+     "shell.execute_reply": "2024-10-15T10:21:51.206117Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "135503fa",
+   "id": "3bf325da",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-09-20T07:57:13.779575Z",
-     "iopub.status.busy": "2024-09-20T07:57:13.779243Z",
-     "iopub.status.idle": "2024-09-20T07:57:14.888725Z",
-     "shell.execute_reply": "2024-09-20T07:57:14.888189Z"
+     "iopub.execute_input": "2024-10-15T10:21:51.208672Z",
+     "iopub.status.busy": "2024-10-15T10:21:51.208249Z",
+     "iopub.status.idle": "2024-10-15T10:21:52.301921Z",
+     "shell.execute_reply": "2024-10-15T10:21:52.301352Z"
     }
    },
    "outputs": [
@@ -671,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
