deploy: 9f2d1a57b1e3c42772148ca5dc93140bec3f833b

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "960f6fb8",
+   "id": "00c5992a",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16e05ef2",
+   "id": "9db8f6ca",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "692dd54b",
+   "id": "cac8c782",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dce3e11",
+   "id": "3e0bfdff",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9245eacb",
+   "id": "13184acf",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0fe338b",
+   "id": "05836966",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fecbbdcb",
+   "id": "8695a1f6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:21:41.990913Z",
-     "iopub.status.busy": "2024-10-15T10:21:41.990725Z",
-     "iopub.status.idle": "2024-10-15T10:21:46.436664Z",
-     "shell.execute_reply": "2024-10-15T10:21:46.436069Z"
+     "iopub.execute_input": "2024-10-15T10:39:30.314965Z",
+     "iopub.status.busy": "2024-10-15T10:39:30.314759Z",
+     "iopub.status.idle": "2024-10-15T10:39:34.633001Z",
+     "shell.execute_reply": "2024-10-15T10:39:34.632398Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b37e40b",
+   "id": "7c6084e2",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "999666ca",
+   "id": "bc4eff47",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2d140a7",
+   "id": "de73cabc",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1667aeee",
+   "id": "1c8557f7",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e33d0142",
+   "id": "82475594",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a56655b7",
+   "id": "840d928e",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d23d0f9",
+   "id": "47aa3e3b",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de3c0ce5",
+   "id": "375368f4",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "125ce4d8",
+   "id": "85dfe806",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:21:46.438957Z",
-     "iopub.status.busy": "2024-10-15T10:21:46.438510Z",
-     "iopub.status.idle": "2024-10-15T10:21:48.394360Z",
-     "shell.execute_reply": "2024-10-15T10:21:48.393814Z"
+     "iopub.execute_input": "2024-10-15T10:39:34.635320Z",
+     "iopub.status.busy": "2024-10-15T10:39:34.634871Z",
+     "iopub.status.idle": "2024-10-15T10:39:36.527870Z",
+     "shell.execute_reply": "2024-10-15T10:39:36.527280Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a4af7ad",
+   "id": "1a49fb1b",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4a44f962",
+   "id": "9e25f22e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:21:48.396403Z",
-     "iopub.status.busy": "2024-10-15T10:21:48.396031Z",
-     "iopub.status.idle": "2024-10-15T10:21:48.399849Z",
-     "shell.execute_reply": "2024-10-15T10:21:48.399281Z"
+     "iopub.execute_input": "2024-10-15T10:39:36.530072Z",
+     "iopub.status.busy": "2024-10-15T10:39:36.529735Z",
+     "iopub.status.idle": "2024-10-15T10:39:36.533470Z",
+     "shell.execute_reply": "2024-10-15T10:39:36.532894Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80f017e8",
+   "id": "f5263ec9",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be609414",
+   "id": "df20469c",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61980dec",
+   "id": "eed7fea9",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7b0d4f9",
+   "id": "c6ce572d",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "240793d4",
+   "id": "b8eeb06d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:21:48.401621Z",
-     "iopub.status.busy": "2024-10-15T10:21:48.401435Z",
-     "iopub.status.idle": "2024-10-15T10:21:48.447107Z",
-     "shell.execute_reply": "2024-10-15T10:21:48.446518Z"
+     "iopub.execute_input": "2024-10-15T10:39:36.535327Z",
+     "iopub.status.busy": "2024-10-15T10:39:36.535143Z",
+     "iopub.status.idle": "2024-10-15T10:39:36.578202Z",
+     "shell.execute_reply": "2024-10-15T10:39:36.577693Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07b8cf31",
+   "id": "6e39ba1b",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "99fd587c",
+   "id": "664a2327",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:21:48.449142Z",
-     "iopub.status.busy": "2024-10-15T10:21:48.448785Z",
-     "iopub.status.idle": "2024-10-15T10:21:48.517642Z",
-     "shell.execute_reply": "2024-10-15T10:21:48.517115Z"
+     "iopub.execute_input": "2024-10-15T10:39:36.580111Z",
+     "iopub.status.busy": "2024-10-15T10:39:36.579755Z",
+     "iopub.status.idle": "2024-10-15T10:39:36.646754Z",
+     "shell.execute_reply": "2024-10-15T10:39:36.646183Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6034a833",
+   "id": "4accca33",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "439438d7",
+   "id": "476a3081",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "16f1bbef",
+   "id": "8225f967",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:21:48.519723Z",
-     "iopub.status.busy": "2024-10-15T10:21:48.519363Z",
-     "iopub.status.idle": "2024-10-15T10:21:48.549487Z",
-     "shell.execute_reply": "2024-10-15T10:21:48.548935Z"
+     "iopub.execute_input": "2024-10-15T10:39:36.648914Z",
+     "iopub.status.busy": "2024-10-15T10:39:36.648568Z",
+     "iopub.status.idle": "2024-10-15T10:39:36.677138Z",
+     "shell.execute_reply": "2024-10-15T10:39:36.676536Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa254f6c",
+   "id": "4fbe8c07",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc25d18f",
+   "id": "5ebac27e",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc39cd7b",
+   "id": "8540aa61",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ccd28bf",
+   "id": "5008de1e",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f0a2e98",
+   "id": "88f278f0",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a75de58d",
+   "id": "2de2c20e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:21:48.551713Z",
-     "iopub.status.busy": "2024-10-15T10:21:48.551278Z",
-     "iopub.status.idle": "2024-10-15T10:21:48.555437Z",
-     "shell.execute_reply": "2024-10-15T10:21:48.554919Z"
+     "iopub.execute_input": "2024-10-15T10:39:36.679340Z",
+     "iopub.status.busy": "2024-10-15T10:39:36.678972Z",
+     "iopub.status.idle": "2024-10-15T10:39:36.683339Z",
+     "shell.execute_reply": "2024-10-15T10:39:36.682774Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87b3ee15",
+   "id": "fa5e90d4",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9f1f9f8a",
+   "id": "823623f7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:21:48.557396Z",
-     "iopub.status.busy": "2024-10-15T10:21:48.557079Z",
-     "iopub.status.idle": "2024-10-15T10:21:48.560162Z",
-     "shell.execute_reply": "2024-10-15T10:21:48.559433Z"
+     "iopub.execute_input": "2024-10-15T10:39:36.685516Z",
+     "iopub.status.busy": "2024-10-15T10:39:36.685066Z",
+     "iopub.status.idle": "2024-10-15T10:39:36.688189Z",
+     "shell.execute_reply": "2024-10-15T10:39:36.687550Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01a4e4b3",
+   "id": "9698a259",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "875681f5",
+   "id": "7a41071b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:21:48.561961Z",
-     "iopub.status.busy": "2024-10-15T10:21:48.561634Z",
-     "iopub.status.idle": "2024-10-15T10:21:51.195734Z",
-     "shell.execute_reply": "2024-10-15T10:21:51.195142Z"
+     "iopub.execute_input": "2024-10-15T10:39:36.689999Z",
+     "iopub.status.busy": "2024-10-15T10:39:36.689655Z",
+     "iopub.status.idle": "2024-10-15T10:39:39.277570Z",
+     "shell.execute_reply": "2024-10-15T10:39:39.276966Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23473c43",
+   "id": "e8d2cde2",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8f19a8f",
+   "id": "3add78fe",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b945f299",
+   "id": "6248d536",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b970b5da",
+   "id": "5b680eda",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a8e9c772",
+   "id": "1f7f1c48",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:21:51.198094Z",
-     "iopub.status.busy": "2024-10-15T10:21:51.197736Z",
-     "iopub.status.idle": "2024-10-15T10:21:51.201835Z",
-     "shell.execute_reply": "2024-10-15T10:21:51.201170Z"
+     "iopub.execute_input": "2024-10-15T10:39:39.279661Z",
+     "iopub.status.busy": "2024-10-15T10:39:39.279277Z",
+     "iopub.status.idle": "2024-10-15T10:39:39.283310Z",
+     "shell.execute_reply": "2024-10-15T10:39:39.282812Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fb790899940>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f486954d940>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f752d8b",
+   "id": "0b2fa9c8",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d4c94a5",
+   "id": "365f5939",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "335ad083",
+   "id": "19691968",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5e7d860",
+   "id": "64f37218",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "377d12a5",
+   "id": "aa641715",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:21:51.203892Z",
-     "iopub.status.busy": "2024-10-15T10:21:51.203566Z",
-     "iopub.status.idle": "2024-10-15T10:21:51.206739Z",
-     "shell.execute_reply": "2024-10-15T10:21:51.206117Z"
+     "iopub.execute_input": "2024-10-15T10:39:39.285027Z",
+     "iopub.status.busy": "2024-10-15T10:39:39.284830Z",
+     "iopub.status.idle": "2024-10-15T10:39:39.287952Z",
+     "shell.execute_reply": "2024-10-15T10:39:39.287340Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3bf325da",
+   "id": "b977431e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-15T10:21:51.208672Z",
-     "iopub.status.busy": "2024-10-15T10:21:51.208249Z",
-     "iopub.status.idle": "2024-10-15T10:21:52.301921Z",
-     "shell.execute_reply": "2024-10-15T10:21:52.301352Z"
+     "iopub.execute_input": "2024-10-15T10:39:39.289800Z",
+     "iopub.status.busy": "2024-10-15T10:39:39.289367Z",
+     "iopub.status.idle": "2024-10-15T10:39:40.371728Z",
+     "shell.execute_reply": "2024-10-15T10:39:40.371165Z"
     }
    },
    "outputs": [
